Fix total question slider alignment issue

--- a/src/components/UI/Form/Option.module.css
+++ b/src/components/UI/Form/Option.module.css
@@ -30,3 +30,8 @@
     border-radius: 3px;
     width: 150px;
 }
+
+.total_ques-option .OptionField {
+    display: flex;
+    gap: 10px;
+}
