--- a/src/components/layout/overlays/MenuModal/MenuModal.module.css
+++ b/src/components/layout/overlays/MenuModal/MenuModal.module.css
@@ -4,7 +4,6 @@
 
 .TotalQues {
     position: relative;
-    top: 4px;
     margin-right: 15px;
 }
 
